# test-project-template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/test_project/: math_functions.hpp
scripts/: build_and_run.sh  build_and_test.sh
src/: CMakeLists.txt  main.cpp  math_functions.cpp
tests/: CMakeLists.txt  test_math_functions.cpp
